firmware/defmt-test/macros/tests/ui/test-has-non-empty-signature.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[init]
    fn init() {
        // empty
    }

    #[test]
    fn test(arg: &mut u8) {
        assert!(true);
    }
}
